# appxc

./: .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  SECURITY.md  conftest.py  manual_tests.py  pyproject.toml  requirements.txt
.basedpyright/: baseline.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/actions/run-tox/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: cd.yml  ci-approval.yml  ci-checks.yml  ci-entry.yml  ci-quickchecks.yml  remove-old-artifacts.yml  reuse-build.yml  reuse-deploy-pypi.yml  reuse-static-checks.yml  reuse-testing.yml  validate-deploy.yml
dev/: _ensure_plantuml_jar.sh  _verify_clean_working_tree.sh  branch_close.sh  branch_start.sh  build_doc.sh  check_license_headers.sh  locale_scan.sh  locale_update.sh  requirements.txt
doc/: conf.py  index.md  requirements.txt  style.puml
doc/_ext/: page_status.py
doc/_static/: external-links.css  external-links.js  page-status.css  typography.css
doc/_templates/: layout.html
doc/_templates/components/: page-status.html
doc/_templates/sections/: sidebar-secondary.html
doc/dev/: APPXC Application Testing.md  APPXC Deployment.md  APPXC Test Strategy.md  APPXF Test Strategy.md  Definition of Done.md  Development Notes (How To Lines).md  Project and Workspace Initialization.md  _dev.md  contributing.md  index.md
doc/dev/concepts/: _concepts.md  app_test_harness.md  index.md  page_status.md  testing_backwards.md
doc/dev/draft_features/: case-runner.puml  generate request.md  generate-request.puml  index.md  update user database.md  update-user-database.puml
doc/dev/draft_modules/: CaseRunner.md  index.md
doc/dev/drafts/: README_OLD.md  _drafts.md
doc/dev/how-to/: _how-to.md  dod.md  workspace_initialization.md
doc/dev/references/: _references.md  changes.md  deployment.md  index.md  static checks.md  test strategy.md
doc/images/: fileSync.drawio  overview.drawio  security.drawio
doc/user/: _user.md  scope.md
doc/user/concerns/: Configuration.md  Implementation Features.md  Limitations.md  Login for Local Encryption.md  Storage Concept.md  _concerns.md  index.md  maintainability.md  persistency.md  registration.puml  security.md
doc/user/features/: Configuration.md  Data Synchronization.md  Logging.md  Registration.md  User Registry.md  _features.md  registration.puml  user_interface.md
doc/user/modules/: Github Support.md  Locale (Translations).md  _modules.md  github-support-testing.puml  index.md  storage.md
src/appxc/: __init__.py  fileversions.py  logging.py  options.py  stateful.py
src/appxc/config/: __init__.py  cleanup_parts.py  config.py
src/appxc/email/: __init__.py  sendmail.py
src/appxc/gui/: __init__.py  application.py  common.py  config.py  locale.py  login.py  manual_config_update.py  registration_admin.py  registration_user.py  setting_base.py  setting_dict.py  setting_select.py
src/appxc/locale/: appxc-gui.pot
src/appxc/pyinstaller/: __init__.py  hook-appxc_private.py
src/appxc/registry/: __init__.py  _public_encryption.py  _registration_request.py  _registration_response.py  _registry_base.py  _signature.py  _user_db.py  _user_id.py  registry.py  shared_storage.py  shared_sync.py
src/appxc/security/: __init__.py  private_storage.py  security.py
src/appxc/setting/: __init__.py  base_types.py  setting.py  setting_dict.py  setting_extension.py  setting_select.py
src/appxc/storage/: __init__.py  buffer.py  ftp.py  local.py  meta_data.py  ram.py  serializer.py  serializer_compact.py  serializer_json.py  serializer_raw.py  storable.py  storage.py  storage_to_bytes.py  sync.py
src/appxc/utility/: __init__.py  ntptime.py
src/appxc_dev/: __init__.py  check_license_headers.py  po_stats.py
src/appxc_matema/: __init__.py  case_data.py  case_info.py  case_parser.py  case_runner.py  case_runner_gui.py  cmd.py  git_info.py  scanner.py
src/appxf/: fileversions.py  logging.py  options.py  stateful.py
src/appxf/config/: config.py
src/appxf/email/: sendmail.py
src/appxf/gui/: application.py  common.py  config.py  login.py  manual_config_update.py  registration_admin.py  registration_user.py  setting_base.py  setting_dict.py  setting_select.py
src/appxf/locale/: po_stats.py
src/appxf/pyinstaller/: __init__.py
src/appxf/registry/: _public_encryption.py  _registration_request.py  _registration_response.py  _registry_base.py  _signature.py  _user_db.py  _user_id.py  registry.py  shared_storage.py  shared_sync.py
src/appxf/security/: private_storage.py  security.py
src/appxf/setting/: base_types.py  setting.py  setting_dict.py  (+2 more)
src/appxf_dev/: __init__.py  check_license_headers.py  po_stats.py
src/appxf_matema/: __init__.py  case_data.py  case_info.py  case_parser.py  case_runner.py  case_runner_gui.py  cmd.py  git_info.py
tests/: manual_application.py  test_buffer.py  test_options.py  test_statful.py
tests/_fixtures/: app_harness.py  application.py  fake_tkinter.py  restricted_location.py  test_sandbox.py
tests/fixtures/: app_harness.py  app_harness_gui.py  application.py  appxc_objects.py  appxf_objects.py  fake_tkinter.py  restricted_location.py  test_sandbox.py
tests/gui/: application.py  manual_setting_dict_column_frame.py  manual_setting_dict_window.py  manual_setting_dict_window_columns.py  manual_setting_list.py  manual_setting_select_02_template.py  manual_setting_select_03_edit.py
tests/registry/: test_registry.py  test_secure_sharded_storage.py
tests/security/: test_security.py
tests/setting/: test_setting.py  test_setting_dict.py  test_setting_types.py
tests/storage/: disabled_test_remote_ftp.py  test_serializer_base.py
tests/unit/: test_buffer.py  test_fileversions.py  test_logging.py  test_options.py  test_statful.py
tests/utility/: test_ntptime.py
tests_features/data_synchronization/: test_bdd_sync.py
tests_features/login_for_local_encryption/: manual_application_login.py
tests_features/registration/: test_bdd_registry.py
tests_features/setting/: test_setting_json.py
(+76 files in other folders)
