# Copyright 2026 the contributors of APPXF (github.com/alexander-nbg/appxf)
# SPDX-License-Identifier: 0BSD
[project]
name = "appxf"
version = "0.0.3a0"
authors = [
  { name = "alexander-nbg", email="mail@alexander-nbg.de" }
]
description = "APPXF application (APP) cross functional concerns (XF)"
readme = "README.md"
requires-python = ">=3.10"
license="Apache-2.0"
license_file = "LICENSES/Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/.*",
  "tests",
  "requirements_test.txt"
]

[project.entry-points.pyinstaller40]
hook-dirs = "appxf.pyinstaller:get_hook_dirs"

[tool.appxf]
# The testing sandbox is the root directory where files are placed that are
# needed or generated during test case. Each test case should use individual
# subfolders.
test-sandbox-root = "./.testing"

[tool.ruff]
# Note: Line length default is already 88. Minimum python version is taken from project
# configuration.

[tool.ruff.lint]
# Remark: The selected rules are not ciceled in stone. Start discussing, if there are
# good reasons to change.
select = ["ALL"]
ignore = [
  # TODO: The following rules are currently reviewed for planning or adequate
  # argumentation. They correspond to 834 issues.
  "ARG001", "ARG002",
  "COM812",
  "EM101", "EM102",
  "EXE001", "EXE003", "EXE005",
  "FBT001", "FBT002", "FBT003",
  "FURB110", "FURB171",
  "INP001",
  "PGH003",
  "PGH004",
  "PIE790",
  "PLC0415",
  "PLR",
  "PLW",
  "PTH",
  "RET",
  "RSE102",
  "SLF001",
  "T201",
  "TC001", "TC003",
  "TRY",
  # TODO: The following rules still need to be resolved to conclude #12
  "DTZ", "ICN001",

  # EXCLUDED RULES
  # --------------
  "FIX002", # Even in an APPXF v1.0.0, TODO remarks remain being allowed if a
            # corresponding ticket was created, is linked and still actove (TODO #42).
            # Despite TODO, no other tag should be used and other FIX rules remain in
            # place.
  "TD",     # TODO rules in APPXF do not follow this pattern
  "C901",   # Complexity shall be rated by reviewers

  # PENDING RULES: The activation/fixing of the following rules is delayed and a
  # strategy to decrease numbers over time will be in place.
  #
  # TODO: the decrease over time strategy.
  "ANN", "BLE001", "D", "ERA001", "PT", "PTH", "RUF100"
]

[tool.ruff.format]
# no specific settings here, yet

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
# Unused imports in __init__.py are intentional re-exports.
"__init__.py" = ["F401"]
# TODO: This is a slight issue since in some occasions, it causes unwanted dependencies.
# Example: when storage activated FTP again, any usage of storage would also import the
# dependency to FTP. This is acceptable for now, but not on the long run. Despite the
# other solutions (adding to __all__ and maxing the re-imports explicit with [import XY
# as XY]), merging classes into appropriate longer module files would enable dropping
# the module facade in __init__.py

# Rules are relaxed for test case implementation
"tests*/**/*.py" = [
  "ANN",    # relaxing on type annotations
  "ARG",    # relaxing on unused arguments and alike
  "ERA001", # commented out code is acceptable
  "T201",   # print statements in tests are OK
  "S"       # No security checks for test code
  ]

# TODO: matema is generally in draft status and not usable. Disabling security schecks.
"src/appxf_matema/**/*.py" = [
  "ARG", "S603", "S607"
]

# TODO: development scripts are not part of the shipped library and are only running
# locally and within CI (not in user applications)
"src/appxf_dev/**/*.py" = [
  "S607"
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = True
    env_list = py310, py312

    [gh-actions]
    python =
        3.10: py310
        3.12: py312

    [testenv]
    passenv = APPXF_*
    setenv = PYTHONPATH = {toxinidir}
             VIRTUALENV_DOWNLOAD=0
    deps =
      -r{toxinidir}/requirements.txt
      -r{toxinidir}/requirements_test.txt

    commands = pytest -rA tests/_fixtures/application.py::test_cleanup
               coverage erase
               coverage run --source=appxf --context=UNIT --branch -m pytest -rA ./tests
               coverage report --contexts=UNIT
               coverage html --contexts=UNIT -d cov_html_UNIT
               coverage run -a --source=appxf --context=FEATURE --branch -m pytest -rA ./tests_features
               coverage report --contexts=FEATURE
               coverage html --contexts=FEATURE -d cov_html_FEATURE
               coverage report
               coverage html -d cov_html
"""
# commands = pytest --cov=appxf --cov-report html --cov-report term
# commands = coverage run --source src -m pytest