# Copyright 2026 the contributors of APPXC (github.com/alexander-nbg/appxc)
# SPDX-License-Identifier: 0BSD
[project]
name = "appxc"
version = "0.0.3a0"
authors = [
  { name = "alexander-nbg", email="mail@alexander-nbg.de" }
]
description = "APPXC application (APP) cross functional concerns (XC)"
readme = "README.md"
requires-python = ">=3.10"
license="Apache-2.0"
license_file = "LICENSES/Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/.*",
  "tests",
]

[project.entry-points.pyinstaller40]
hook-dirs = "appxc.pyinstaller:get_hook_dirs"

[tool.appxc]
# The testing sandbox is the root directory where files are placed that are
# needed or generated during test case. Each test case should use individual
# subfolders.
test-sandbox-root = "./.testing"

[tool.ruff]
# Note: Line length default is already 88. Minimum python version is taken from project
# configuration.

[tool.ruff.lint]
# Remark: The selected rules are not ciceled in stone. Start discussing, if there are
# good reasons to change.
select = ["ALL"]
ignore = [
  # EXCLUDED RULES
  # --------------
  # Feel free to add any rule which is conflicting with the ruff formater. Those rules
  # were typically NOT added by default since style consistency was valued higher than
  # the irritation of adding them here, later. Exception was COM812 with the very
  # irritating warning message upon [ruff format]. See also:
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
  "COM812",  # Conflicts with formater AND causes warning message on [ruff format]
  "EM",      # avoid extra code and accept duplication in error messages
  "FIX002",  # Even in an APPXC v1.0.0, TODO remarks remain being allowed if a
             # corresponding ticket was created, is linked and still actove (TODO #42).
             # Despite TODO, no other tag should be used and other FIX rules remain in
             # place.
  "TC001", "TC003", # import readability over minor performance improvement
  "TD",      # rules for TODO in APPXC do not follow this pattern
  "C901",    # Complexity shall be rated by reviewers
  "FBT",     # boolean positional arguments are common for set(key, value) patterns and
  # requiring an extra * to enforce named keyword arguments messes up the function
  # definition. Issues can be identified in review.
  "PLR0911", "PLR0912", "PLR0913", "PLR0915", # "too many" to be rated by reviewers
  "PLW2901", # changing loop variable is considered OK
  "RET504",  # naming the return value does not do any harm

  # PENDING RULES: The activation/fixing of the following rules is delayed and a
  # strategy to decrease numbers over time will be in place.
  #
  # TODO #55: the decrease over time strategy.
  "ANN", "ARG001", "ARG002", "BLE001", "D", "ERA001", "PLR2004", "PT", "PTH",
  "RUF100", "SLF001", "T201", "TRY003"
]

[tool.ruff.format]
# no specific settings here, yet

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
# Unused imports in __init__.py are intentional re-exports.
"__init__.py" = ["F401"]
# TODO: This may be an issue since in some occasions, it causes unwanted dependencies.
# Example: when storage activated FTP again, any usage of storage would also import the
# dependency to FTP. This is acceptable for now, but not on the long run. Despite the
# other solutions (adding to __all__ and maxing the re-imports explicit with [import XY
# as XY]), merging classes into appropriate longer module files would enable dropping
# the module facade in __init__.py.

# Rules are relaxed for test case implementation
"tests*/**/*.py" = [
  "ANN",     # relaxing on type annotations
  "ARG",     # relaxing on unused arguments and alike
  "ERA001",  # commented out code is acceptable
  "FBT002",  # allow boolean positional arguments (not enforcing as keyword-argument)
  "FURB171", # "something in [1] is quite OK in test code
  "INP001",  # no __init__.py package init for test code
  "PLR",     # refactoring suggestions OK to ignore
  "T201",    # print statements in tests are OK
  "TRY",     # allow quick-to-implement error handling in tests
  "S",       # No security checks for test code
  ]
"tests/**/*.py" = [
  "SLF001"   # accessing private members in UT's is OK (but not in feature tests)
]

"doc/**/*.py" = [
  "INP001" # no __init.py__ for doc configuration
]

# TODO: matema is generally in draft status and not usable. Disabling security checks.
"src/appxc_matema/**/*.py" = [
  "ARG", "S603", "S607", "T201"
]

# development scripts are not part of the shipped library and are only running locally
# and within CI (not in user applications)
"src/appxc_dev/**/*.py" = [
  "S607", # partial executable paths are acceptable in dev-script context
  "T201"  # print statements OK in dev scripts
]

[tool.basedpyright]
include = ["src"]
# This is a very initial setup of basedpyright which is intended to evolve over time.

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = True
    env_list = py310, py312

    [gh-actions]
    python =
        3.10: py310
        3.12: py312

    [testenv]
    passenv = APPXC_*
    setenv = PYTHONPATH = {toxinidir}
             VIRTUALENV_DOWNLOAD=0
    deps =
      -r{toxinidir}/requirements.txt
      -r{toxinidir}/tests/requirements.txt

    commands = pytest -rA tests/fixtures/application.py::test_cleanup
               coverage erase
               coverage run --source=appxc --context=UNIT --branch -m pytest -rA ./tests/unit
               coverage report --contexts=UNIT
               coverage html --contexts=UNIT -d cov_html_UNIT
               coverage run -a --source=appxc --context=ACCEPTANCE --branch -m pytest -rA ./tests/acceptance
               coverage report --contexts=ACCEPTANCE
               coverage html --contexts=ACCEPTANCE -d cov_html_ACCEPTANCE
               coverage report
               coverage html -d cov_html
"""
# commands = pytest --cov=appxc --cov-report html --cov-report term
# commands = coverage run --source src -m pytest